--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,10 @@
     <dimen name="image_left_margin">32dp</dimen>
     <dimen name="body_top_margin">96dp</dimen>
     <dimen name="margin_wide">16dp</dimen>
+
+    <!-- dimen for second codelab -->
+    <dimen name="item_width">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="padding_regular">10dp</dimen>
+    <dimen name="standard_margin_second">16dp</dimen>
 </resources>
